<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_title"
        android:id="@+id/title_field"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:maxLength="16"
        android:hint="@string/hint_policy"
        android:id="@+id/policy_field"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:hint="@string/hint_date_birth"
        android:id="@+id/date_birth_field"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/save_text"
        android:id="@+id/saveButton"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>