<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_title"
        android:id="@+id/title_field"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:maxLength="16"
            android:hint="@string/hint_policy"
            android:id="@+id/policy_field"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            />

        <ImageButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_help_black_18dp"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            />

    </RelativeLayout>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:hint="@string/hint_date_birth"
        android:id="@+id/date_birth_field"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/continue_text"
        android:id="@+id/continueButton"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>